fixed css alignment

--- a/source/task.css
+++ b/source/task.css
@@ -3,13 +3,14 @@
 /*
  * Section for the task container
  */
-#main-container {
+#main-list {
   list-style-type: none;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 
+  min-width: 75%;
   max-width: 75%;
   max-height: 100%;
   margin: 0 auto;
